use ProcessBuilder to create the external processes to RI, this allows us to force STDERR to redirect into input stream of process. So we shouldn't be able to hang on reading input in case of errors (and we flow the error/stack trace on over to the view).
git-svn-id: https://rubyeclipse.svn.sourceforge.net/svnroot/rubyeclipse/trunk@2219 0bd42bcd-5f16-0410-9896-c9ec0b0ce843